tests/sumo/spec/departure/errors/slow_lane_ahead_ignore/errors.sumo
Warning: Vehicle 'v0' is inserted too fast and will violate the speed limit on a lane 'beg2left_0'.
